ARC-3265: fix button labels going out of bounds in the blades

--- a/src/modules/shared/components/Blade/Blade.module.scss
+++ b/src/modules/shared/components/Blade/Blade.module.scss
@@ -167,6 +167,7 @@ $padding-horizontal-mobile: $spacer-sm;
 		border-top: $divider-grey;
 		background: $sticky-background;
 		padding: $spacer-sm $padding-horizontal;
+		width: 100%;
 
 		@media (max-width: $breakpoint-md) {
 			padding: $padding-horizontal-mobile;
@@ -174,34 +175,54 @@ $padding-horizontal-mobile: $spacer-sm;
 
 		&-buttons {
 			padding: 0;
-			display: flex;
-			flex-direction: column;
-			align-content: flex-end;
+			display: inline-block;
 			gap: $spacer-xs;
+			width: 100%;
 
 			&-extra-wide {
-				flex-direction: row-reverse;
 				justify-content: space-between;
 
-				:global(.c-button) {
+				:global(.c-button), a {
 					display: inline-block;
 					width: unset;
+					max-width: 50%;
+
+					:global(.c-button__content) {
+						width: 100%;
+					}
+
+					:global(.c-button__label) {
+						@include text-ellipsis(true);
+					}
+
+					&:last-child {
+						float: right;
+					}
 				}
 			}
 
 			@media (max-width: $breakpoint-md) {
-				flex-direction: row-reverse;
 				justify-content: space-between;
 			}
 
 			&:not(&-extra-wide){
-				:global(.c-button) {
+				:global(.c-button), a {
 					display: block;
 					width: 100%;
 
+					:global(.c-button__content) {
+						width: 100%;
+					}
+
+					:global(.c-button__label) {
+						@include text-ellipsis(true);
+
+						width: 100%;
+					}
+
 					@media (max-width: $breakpoint-md) {
 						display: inline-block;
-						width: unset;
+						width: 50%;
 
 						&:only-child {
 							display: block;
